# AI-E-commerce-Assistant

./: .env  .env.example  README.md  pyproject.toml  setup.py  test_installation.py
ai_ecommerce_assistant/: __init__.py  api.py  config.py  core.py
ai_ecommerce_assistant/integrations/: shopify.py
ai_ecommerce_assistant/modules/: recommendations.py
examples/: basic_usage.py  shopify_integration.py
